# stac-data-loader

./: .bumpversion.cfg  .gitignore  CHANGES.md  Makefile  README.md  pyproject.toml
data/: .gitignore  annotations.geojson
data/EuroSAT/: README.md
data/EuroSAT/data/subset/ds/images/remote_sensing/otherDatasets/sentinel_2/label/AnnualCrop/: AnnualCrop_1175.geojson  (+9 more)
data/EuroSAT/stac/subset/: catalog.json
data/EuroSAT/stac/subset/test/: collection.json  item-0.json  item-1.json  item-10.json  item-11.json  item-12.json  item-13.json  item-14.json  item-15.json  item-16.json  item-17.json  item-18.json  item-19.json  item-2.json  item-3.json  item-4.json  item-5.json  item-6.json  item-7.json  item-8.json  item-9.json
data/EuroSAT/stac/subset/train/: collection.json  item-0.json  item-1.json  item-10.json  item-11.json  item-12.json  item-13.json  item-14.json  item-15.json  item-16.json  item-17.json  item-18.json  item-19.json  item-2.json  item-20.json  item-21.json  item-22.json  item-23.json  item-24.json  item-25.json  item-26.json  item-27.json  item-28.json  item-29.json  item-3.json  item-30.json  item-31.json  item-32.json  item-33.json  item-34.json  item-35.json  item-36.json  item-37.json  item-38.json  item-39.json  item-4.json  item-40.json  item-41.json  item-42.json  item-43.json  (+21 more)
data/EuroSAT/stac/subset/validate/: collection.json  item-0.json  item-1.json  item-10.json  item-11.json  item-12.json  item-13.json  item-14.json  item-15.json  item-16.json  item-17.json  item-18.json  item-19.json  item-2.json  item-3.json  item-4.json  item-5.json  item-6.json  item-7.json  item-8.json  item-9.json
notebooks/: mlhub_dataloader.ipynb  stac_dataloader.ipynb  stac_eurosat.ipynb
stac_dataloader/: __init__.py  mlhub.py  mlhub_dataloader.py  typedef.py
(+181 files in other folders)
