[tool.poetry]
name = "stac-dataloader"
version = "0.0.0"
description = "Dataset interfaces for loading STAC references for Machine Learning pipelines."
authors = ["Francis Charette-Migneault <francis.charette.migneault@crim.ca>"]
license = "MIT"
readme = "README.md"
packages = [{include = "stac_dataloader"}]

[tool.poetry.dependencies]
python = "^3.8"
radiant-mlhub = "^0.5.5"
rasterio = "^1.3.6"
torchgeo = "^0.4.1"
typing-extensions = "^4.5.0"
pystac-client = "~0.4.0"
torchdata = "^0.6.0"
zen3geo = "^0.6.0"
planetary-computer = "^0.5.1"
xbatcher = "^0.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
